--- a/README
+++ b/README
@@ -2,5 +2,12 @@
 
 2002-2022
 
+
+# liquudatie
+https://nl.wikipedia.org/wiki/Liquidatie_(moord)
+
+# participatiewet
+https://nl.wikipedia.org/wiki/Participatiewet
+
 # staat der nederlanden
 https://nl.wikipedia.org/wiki/Staat_der_Nederlanden
