--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-# country-without-welfare
-
-2002-2022
+---------------------------
+| country-without-welfare |
+---------------------------
 
 
 # liquidatie
