--- a/README
+++ b/README
@@ -9,5 +9,8 @@ https://nl.wikipedia.org/wiki/Liquidatie_(moord)
 # participatiewet
 https://nl.wikipedia.org/wiki/Participatiewet
 
+# coolhaveneiland
+https://nl.wikipedia.org/wiki/Coolhaveneiland
+
 # staat der nederlanden
 https://nl.wikipedia.org/wiki/Staat_der_Nederlanden
