--- a/README
+++ b/README
@@ -1,6 +1,6 @@
----------------------------
-| country-without-welfare |
----------------------------
+--------------------------
+| nation-without-welfare |
+--------------------------
 
 
 # liquidatie
