--- a/README
+++ b/README
@@ -12,5 +12,14 @@ https://nl.wikipedia.org/wiki/Participatiewet
 # coolhaveneiland
 https://nl.wikipedia.org/wiki/Coolhaveneiland
 
+# nos
+https://en.wikipedia.org/wiki/Nederlandse_Omroep_Stichting
+
+# venorica
+https://en.wikipedia.org/wiki/Veronica_TV
+
+# rtl
+https://en.wikipedia.org/wiki/RTL_Nederland
+
 # staat der nederlanden
 https://nl.wikipedia.org/wiki/Staat_der_Nederlanden
