--- a/README
+++ b/README
@@ -15,6 +15,9 @@ https://nl.wikipedia.org/wiki/Coolhaveneiland
 # achmed aboutaleb
 https://en.wikipedia.org/wiki/Ahmed_Aboutaleb
 
+# labour party
+https://en.wikipedia.org/wiki/Labour_Party_(Netherlands)
+
 # nos
 https://en.wikipedia.org/wiki/Nederlandse_Omroep_Stichting
 
